# cgi_noise

./: .gitignore  Example_Sensitivity.py  Example_tSNR.py  GG_TSNR.py  LICENSE  MANIFEST.in  Main.py  Main_yml.py  README.md  Roman_Examples_script.py  cginoiselib.py  func_library.py  library.py  main_driver.py  pyproject.toml  setup.py  setup2.py
.ipynb_checkpoints/: Roman_Examples-checkpoint.ipynb  func_library-checkpoint.py
Data/Cstability/: CS_NFB1_HLC_250304.csv  CS_WFB4_SPC_201026.csv
Data/Photometry/: CGPERF_SPC_WFB4_200610.csv  DET_CBE_250530.csv
Data/Scenarios/: ~$SCEN_DRM_IMG_WF_B4.xlsx
EBcsvData/: CONST_Amici_parameters.csv  CONST_SNR_FPattributes.csv
EBcsvData/CStability/: CS_HLC_NFIM_250304_SCI.csv  CS_SPC_SPEC_201026.csv  CS_TVAC_NFIM_240425bdk.csv
EBcsvData/Calibration/: CAL_EB_TTR_241227.csv
EBcsvData/Cstability/: CS_NFB1_HLC_250304.csv  CS_NFB3_SPC_201026.csv
EBcsvData/Photometry/: CGPERF_HLC_20190210br.csv  CGPERF_SPC_WFB4_200610.csv  CGPERF_SPEC_20200617.csv  DET_CBE_250530.csv  DET_CBE_TVAC_240402.csv  DET_CBE_TVAC_240720.csv  QE_e2v_Spec.csv  STRAY_Assumptions.csv  STRAY_CBE_210315.csv  STRAY_MUF_table.csv  STRAY_lightforFRN210315.csv  THPT_EB_NFB1_240725.csv  THPT_EB_SPB3_200730.csv  THPT_EB_WFB4_200730.csv  THPT_NFB1_AUG_240725.csv
Refactor/: main_driver.py
cgi_noise/: __init__.py  cgi_noise_cginoiselib.pi  cgi_noise_main.py  cginoiselib.py  loadCSVrow.py  main.py  main_core.py  sens_core.py  tsnr_core.py  unitsConstants.py
others/: Roman_Examples.ipynb  Roman_Examples_script_longer.py  func_library_DCN.py  loadXLcol.py
(+48 files in other folders)
